--- a/gradu.tex
+++ b/gradu.tex
@@ -468,9 +468,43 @@ Tarkasteluvuotena 2003 sekä auringon että geomagneettinen aktiivisuus oli suurta
 
 Kuitenkaan oletus siitä, että pakotteiden aikakehitys tunnettaisiin ei aina ole realistinen. Yhdysvaltain armeijan avaruustaistelulaboratorion HASDM-yläilmakehämalli (lähde) kykenee tekemään massatiheysennusteita kolmen vuorokauden päähän käyttämällä hyväkseen ennusteita auringon UV-säteilystä ja globaalia geomagneettista aktiivisuutta mittaavasta $\mathrm{k_p}$-indeksistä. (lähde HASDM) osoittavat, että  korkean auringon aktiivisuuden aikaan satelliittien kiertoradadan ennusteessa tehtävä paikkavirhe (joka on suoraan verrannollinen tiheysmallin neliöllisen keskiarvon virheeseen) ei merkittävästi kasva ensimmäisen 18:a tunnin aikana ja ennusteen laatu alkaa merkittävästi heiketä vasta 36:n tunnin jälkeen. Kuitenkin vielä kolmen vuorokauden jälkeenkin paikkavirhe on 12\%:a parempi korjaamattomaan tiheysmalliin nähden. HASDM-malli käyttää auringon UV-säteilyvuon ennustamiseen neuroverkkoja, jotka kykenevät tuottamaan luotettavan kolmen vuorokauden ennusteen (lähde SOLAR2000). Näin ollen on mahdollista, että reaaliaikaisesti massatiheyttä korjaavassa data-assimilaatio-järjestelmässä voitaisiin käyttää geofysikaalisten indeksien ennusteita ja viimeisintä analyysikenttää luomaan kuva massatiheyden aikakehityksestä, joka olisi tarkempi kuin korjaamattomien mallien ennusteet. On kuitenkin epäselvää, kuinka HASDM:n ennustusjärjestelmä toimii tilanteessa, jossa geomagneettinen aktiivisuus on suuri. Lisäksi on huomioitava, että HASDM käyttää suurempaa määrää kappaleita ja hyödyntää suoraan NORAD:n salaisia tutkahavaintoja, mikä mahdollistaa tarkemman analyysin tekemisen. 
 
+Nämä tarkemmat havainnot antavat HASDM:lle hyvin tarkan kolmen tunnin aikaresoluution (lähde). Tämänkin työn data-assimilaatio-järjestelmää voisi ajaa pienemmällä aikavälillä, esimerkiksi kahden päivän välein. Kaksirivisen elementtiaineiston pienintä integrointiaikaa (kolme päivää) ei kuitenkaan voida enää lyhentää, mikä joka tapauksessa tasoittaisi mallitilojen muutoksia lyhyempää assimilointi-ikkunaa käytettäessä. Koska termosfäärin massatiheys voi muuttua merkittävästi tuntien aikaskaalassa (esimerkiksi geomagneettisten myrskyjen seurauksena), eivät kaksiriviset elementit läheskään voi kuvata kaikkia yläilmakehässä tapahtuvia muutoksia. Assimilaatioikkunan lyhentäminen aikaresoluution ei tähän ongelmaan välttämättä auta, sillä se voi vähentää kerralla assimiloitavien havaintojen määrää ja aiheuttaa järjestelmään ylimääräistä kohinaa.
+
 Kaikkia HASDM-mallin satelliitteja ei voinut tässä työssä käyttää, sillä yksinkertaisella analyyttisellä SGP4-mallilla ei niiden rataa kyennyt riittävän tarkkaan määrittämään. Lähes kaikki HASDM:n satelliitit, joiden kiertoaika oli yli 225 minuuttia ilmensivät hyvin suurta ja satunnaista vaihtelua (jopa tekijällä 10) yksittäisissä ballistisissa kertoimissa $B_i$. SGP4-malli olettaa, että kolmannen kappaleen voimat ovat merkittäviä kun kappaleen kiertojakso ylittää 225 minuuttia (lähde), mutta on mahdollista, että tässä työssä käytetty mallin julkinen versio ei laske näitä voimia aivan samalla tavalla kuin NORAD:n kiertoratasovituksissaan käyttämä malli. Näin ollen tämän työn SGP4:n antama kappaleen kiertorata poikkeaisi havaitusta ja aiheuttaisi epäjohtonmukaisuuden yhtälön (\ref{Bi_eq}) keskiliikkeen ja viivaintegraalin välille. On myös mahdollista, että tutkahavaintojen avulla määritetyt kaksirivisten elementtien keskiliikkeet itsessään ovat virheelliset. Koska elementit eivät sisällä mitään virheinformaatiota, on lopullista syytä kuitenkin vaikea selvittää. 
 
+SGP4-malliin ja kaksirivisiin elementteihin liittyvistä ongelmista voi osittain päästä eroon vaihtamalla satelliittin paikanmäärityksessä käytetty malli monimutkaiseen numeeriseen (niin sanottuun erityisperturbaatio-) malliin (lähde Picone2005). Täysin numeeriset mallit usein sisältävät tarkemman kuvauksen säteilypaineesta, maan painovoimakentästä ja kolmannen kappaleen voimista. Tehtäessä näillä malleilla termosfäärin tiheysanalyysiä, ainoastaan alkuehto, satelliitin sijainti ja nopeus saadaan kaksirivisestä elementtidatasta ja SGP4-mallista. Tästä alkuehdosta malli voi tarkkaan simuloida satelliitin rataa ja kappaleen paikan määrityksessä tehtävä virhe usein huomattavasti pienenee SGP4:aan verrattuna (lähde Saunders). Numeeristen mallien avulla termosfäärin massatiheysyhtälö voidaan määrittää suoraan satelliitin kiertoratakorkeuden (isoakselin puolikkaan) muutoksista, jonka virhe on todennäköisesti pienempi kuin yhtälöstä (\ref{density_12_eq}) johdetun tiheyden virhe (lähde Saunders). 
 
+Tarkan kiertoratamalliin voi empiirisen yläilmakehämallin (kuten IL) kytkeä suoraan siten, että mallin simuloima ilmakehän massatiheys vaikuttaa kappaleen kiertorataan. Kytketyn mallin avulla on mahdollista luoda tarkka iteratiivinen algoritmi, joka korjaa satelliitin ballistista kerrointa siten, että termosfäärimallin kuvaama massatiheys aiheuttaa satelliitin kiertoradassa havaitun muutoksen (lähde Saunders). Kappaleiden todellinen ballistinen kerroin onkin suurin virhelähde kaksirivisten elementtien avulla tehtävissä yläilmakehätutkimuksissa (lähde). Tässä tutkimuksessa oletettiin, että IL-malli antaa harhattoman kuvauksen termosfäärin massatiheydestä, jolloin ballistinen kerroin voitiin määrittää yksittäisten $B_i$-arvojen pitkän ajan keskiarvona. Koska IL-malli tuskin on harhaton, tässä tutkimuksessa käytetyt todelliset ballistisen kertoimen arvot ovat välttämättä harhaisia. Kaksirivisten elementtien avulla on siis hyvin vaikeaa saada selville termosfäärin masatiheyden absoluuttisia arvoja. Käytännössä harhattomin arvio saadaan määrittämällä jonkin pallomaisen satelliitin (alaindeksi $P$) ballistinen kerroin teoreettisesti (yläindeksi $Te$) ja määräämällä kaikkien epäsäännöllisten (alaindeksi $E$) kappaleiden kertoimet tämän suhteen (lähde Picone): 
+\begin{equation} \label{Bspherical_eq}
+B^T_E = \left \langle B_E^M \right \rangle \frac{B_P^{Te}}{\left \langle B_P^M \right \rangle},
+\end{equation}
+missä kulmasulkeet ilmaisevat pitkän ajan $B_i$ keskiarvoa (kuitenkin saman ajan yli sekä säännölliselle että pallomaiselle kappaleelle). Pallomaisia satelliitteja, joiden teoreettinen $B^T$ vastannee hyvin totuutta on tunnistettu useita (lähde Bowman 2002). Huolellisesta tarkastelusta huolimatta järjestelmällisiä eroja tässä ja aiemmissa töissä vaihtelevin tavoin (lähteet) määritettyjen $B^T$-arvojen välillä ei kuitenkaan löydetty. 
+
+Todellisen ballistisen kertoimen arvon lisäksi on tässä työssä käytettyä kertoimen virhearviota myös mahdollista parantaa. Nyt virheenä käytetään keskiarvon keskivirhettä, mutta tarkalleen ottaen kaava (\ref{Bi_err_eq}) päter vain satunnaisesti jakautuneelle muuttujalle. Peräkkäisten $B_i$-arvojen selvän korrelaation (katso esim. Kuva \ref{fig:Btrue}) johdosta kyseessä on aliarvio ballistisen kertoimen todellisesta virheestä. Käytännössä tämän virheen suuruus vaikuttaa mallin taustan kovarisnssin inflaatioparametrin arvoon, koska EnKF:ssa ryppään päivitys riippu käytännössä mallin ja havaintojen kovarianssin suhtesta (lähde). 
+
+Ballistisen kertoimen ja siten tiheyden virheen absoluuttisesta suuruudesta huolimatta havaintojen määrän lisääminen saattaa tarkentaa data-assimilaatio-järjestelmän analyysiä. Tässä työssä käytetyt 48 maan matalan kiertoradan kappaletta ovat osajoukko HASDM-mallissa käytetyistä kalibrtointikappaleista (lähde) ja niiden ballististen kertoimien on todettu pysyvän käytännössä vakiona. (lähde Emmert) on kuitenkin analysoinut lähes kaikki NORAD:n katalogissa olevat kappaleet, joiden ratoihin termosfäärillä ajatellaan olevan vaikutusta. Tutkimuksessaan hän esitti johtopäätöksen, jonka mukaan mallien tiheyskalibrointiin olisi käytettävissä jopa 5000 kappaletta. Näiden kaksirivisten elementtien lisäksi tiheysassimilaatioon voidaan käyttää myös GOCE, CHAMP, GRACE ja SWARM -painovoimasatelliittien (lähteet) kiihtyvyysmittarien avulla johdettuja kokonaismassatiheyksiä. Painovoimasatelliittien ja elementtihavaintojen assimilaatiossa joudutaan kuitenkin tekemään päätöksiä siitä, mitä mallin kenttiä havaintojen avulla korjataan; tässä työssä korjattiin lämpötilaprofiilia, sillä se vaikuttaa kaikkien kaasulajien massatiheyksiin. Käytännössä kokonaismassatiheys on vain mallin "diagnostinen" suure, joka lasketaan yksittäisten kaasulajien massatiheyksien summana -- havaittua kokonaistiheysjakaumaa vastaa ääretön määrä erilaisia lämpötila- ja tiheysjakaumia, eikä massatiheysmittausten avulla voida täysin rajoittaa assimilaatiojärjestelmää, jossa näitä molempia vaihdellaan yhtä aikaa. Termosfääristä tehdään kuitenkin suoria tiheys- ja lämpötilamittauksia esimerkiksi satelliitin mittaaman ilmahehkun (lähde) ja epäkoherenttien sirontatutkien avulla. Näitä havaintoja olisi mahdollista assimiloida malliin yhdessä kokonaismassatiheysmittausten kanssa, jolloin lämpötila- ja tiheyskenttiä voitaisiin korjata samanaikaisesti, mahdollisesti parantaen analyysin tarkkuutta. 
+
+Assimilaatiomenetelmänä olisi ollut mahdollista käyttää tavallista Kalman-suodinta, sillä mallitilassa oli ainoastaan 11 muuttujaa ja kerralla assimiloitavien havaintojen lukumäräkin oli pieni (40:sta 45:een). Vaihtoehtona olisi ollut myös (lähde Doornbos) käyttämä epälineaariseen optimointiin usein sovellettu Levenberg-Marquardt -algoritmi. Työssä päädyttiin kuitenkin käyttämään ensemble Kalman -suodinta, koska (1) siinä ei ole tarvetta tangentti-lineaarisille operaattoreille, (2) se kehittää mallitilaa ja sen kovarianssia samanaikaisesti, (3) se kykenee antamaan todennäköisyysennusteita, (4) se toimii hyvin myös alimääritellyissä ongelmissa, (5) se ottaa huomioon mallin ennusteen informaatiosisällön määrittäessään analyysiä ja (6) se on laskennallisesti hyvin tehokas. Laskennallisen nopeuden saavuttaminen vaatii kuitenkin pääakselihajotelmalla toteutettua versiota (lähde esimerkki). Siten voidaan teoreettisesti saavuttaa asymptoottinen kompleksisuus (lähde):
+\begin{equation} \label{svdCompl_eq}
+O(oN^2 + mN^2 + N^3).
+\end{equation}
+Tämän työn yksinkertainen implementaatio käyttää analyysiyhtälön (\ref{enkf_anal_eq}) matriisi-inversion laskemiseen Choleskyn algoritmia, jonka takia suotimen kokonaiskomplekisuus on (lähde):
+\begin{equation} \label{naiveCompl_eq}
+O(o^3 + o^2N + oN^2 + mN^2).
+\end{equation}
+Suotimen tehokkaampi muoto on huomattavasti nopeampi kuin Levenberg-Marquardt -algoritmi (lähde Numerical Recipes?):
+\begin{equation} \label{lm_eq}
+O(om^2 + m^3).
+\end{equation}
+EnKF:n kompleksisuus voi siis parhaimmillaan olla lineaarinen sekä havaintojen että mallitilan koon suhteen. Sen sijaan Levenberg-Marquardt'n laskenta-aika kasvaa hyvin nopeasti mallitilan muuttujien lukumäärän lisääntyessä, mikä tarkoittaa, ettei se sovellu suurten mallien assimilaatio-ongelmiin. Se ei myöskään ota huomioon mallin taustaa muodostaessaan analyysiä, vaan korjaus perustuu aina pelkästään havaintoihin [\textit{Periaatteessa olisi varmaan mahdollista käyttää L-M:aa sakkofunktion (\ref{J_eq}) minimointiin yhdessä adjoint-mallin gradientti-informaation kanssa. Tiedä sitten, miten nopeaa se olisi}]. 
+
+Tässä työssä mallitila ($m$) on pienempi kuin yhdessä assimilaatiossa käytettyjen havaintojen määrä keskimäärin (eli ongelma on ylimääritelty), mikä selvästi poikkeaa EnKF:n tyypillisestä sovelluksesta isoissa numeerisissa malleissa (lähde). Matemaattisesti tämä ei kuitenkaan ole ongelma ja suotimen osoitettiin toimivan hyvin myös tässä sovelluksessa. Ylimääritelty assimilaatio-ongelma voi myös vähentää pienestä ryppään koosta aiheutuvia ongelmia, vaikka toisaalta ryppään mallien havaittiin pyrkivän konvergoitumaan ilman kovarianssin inflaatiota. Osittain ongelman luonteen johdosta mallitaustan kovarianssista ei yritetty poistaa siellä mahdollisesti esiintyneitä harhaanjohtavia korrelaatioita. Tyypillisesti lokalisaatio implementoidaan operoimalla kovarianssimatriisia korrelaatiofunktion $\rho$ ja Schur- (eli alkio)tulon ($\circ$) avulla (lähde Horn 1990):
+\begin{equation} \label{lm_eq}
+\mathbf{K} = (\rho \circ \mathbf{C)H^T}(\mathbf{H}(\rho \circ \mathbf{C)H^T + R})^{-1}.
+\end{equation}
+Käytännössä kovarianssia keinotekoisesti pienennetään jonkin (usein polynomimuotoisen (lähde Gaspari ja Cohn)) funktion $\rho$ avulla hilapisteiden välisen etäisyyden funktiona. Ongelmana kuitenkin on, ettei kovarianssia lasketa tässä työssä suoraan. Lisäksi ei ole selvää, millainen eri mallitilan parametrien (kuten alareunan lämpötilagradientin ja eksosfäärin keskimääräisen lämpötilakorjauksen) kovarianssin kuuluu fysikaalisten argumenttien nojalla olla. Ilman tällaista informaatiota ei voida tietää, mikä korrelaatio on kausaalista (fysikaalista) ja mikä pelkkää satunnaisuudesta aiheutuvaa kohinaa. Palloharmonisille malleille on mahdollista tehdä vastaavanlainen korjaus pallofunktioiden kertoimien kovarianssille, mutta käytännössä tämä vaatii aina pseudo-spektraali-menetelmän käyttöä, jossa mallitilaa muunnetaan vuoroin fysikaalisen- ja spektraaliavaruuden välillä (lähde). Koska IL-mallissa ei hilapisteikköä lainkaan ole, ei myöskään näitä menetelmiä voi käyttää. Niinpä ainoa vaihtoehto on olettaa, että mallitilaan nähden suuri rypäs ja havaintojen määrä riittää esittämään malliparametrien kovarianssin luotettavasti. 
+
+Ryppään rajallisen koon lisäksi myös EnKF:ssa käytetty havaintojen satunnaistus (yhtälön (\ref{data_eq}) mukaisesti) aiheuttaa kohinaa (lähde Hamill 2006). Äärellinen määrä satunnaislukuja ei aina täysin edusta alkuperäisen satunnaisjakauman vaihtelua. Siksi onkin kehitetty deterministisiä suotimia, kuten ensemble-muunnos Kalman -suodin (englanniksi \textit{Ensemble Transform Kalman Filter}, ETKF) (lähde), jotka tuottavat samalla havaintoaineistolla ja ryppäällä järjestelmällisesti saman ennusteen. Kalman-suotimet kuitenkin olettavat, että kaikki todennäköisyysjakaumat ovat normaalijakaumia. Esimerkiksi ballistisen kertoimen jakauma ei kuitenkaan aivan tarkalleen ole gaussinen (ks. Kuva XX), mikä antaa syyn olettaa, että sen avulla johdetut havainnotkaan eivät ole. Tulosten perusteella normaalijakauman oletus kuitenkin näyttää toimivan; mikäli näin ei olisi, voitaisiin siirtyä yleisiin hiukkassuotimiin, jotka tukevat mitä tahansa todennäköisyysjakaumaa (lähde). 
 
 \section{Johtopäätökset}
 
