--- a/gradu.bib
+++ b/gradu.bib
@@ -54,6 +54,442 @@
   publisher={Wiley Online Library}
 }
 
+@article{richmond_1992,
+  title={A thermosphere/ionosphere general circulation model with coupled electrodynamics},
+  author={Richmond, AD and Ridley, EC and Roble, RG},
+  journal={Geophysical Research Letters},
+  volume={19},
+  number={6},
+  pages={601--604},
+  year={1992},
+  publisher={Wiley Online Library}
+}
+
+@article{ridley_2006,
+  title={The global ionosphere--thermosphere model},
+  author={Ridley, AJ and Deng, Y and Toth, G},
+  journal={Journal of Atmospheric and Solar-Terrestrial Physics},
+  volume={68},
+  number={8},
+  pages={839--864},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{matsuo_2012,
+  title={Data assimilation of thermospheric mass density},
+  author={Matsuo, Tomoko and Fedrizzi, Mariangel and Fuller-Rowell, Timothy J and Codrescu, Mihail V},
+  journal={Space Weather},
+  volume={10},
+  number={5},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+@article{houtekamer_1998,
+  title={Data assimilation using an ensemble Kalman filter technique},
+  author={Houtekamer, Peter L and Mitchell, Herschel L},
+  journal={Monthly Weather Review},
+  volume={126},
+  number={3},
+  pages={796--811},
+  year={1998}
+}
+
+@article{houtekamer_2001,
+  title={A sequential ensemble Kalman filter for atmospheric data assimilation},
+  author={Houtekamer, Peter L and Mitchell, Herschel L},
+  journal={Monthly Weather Review},
+  volume={129},
+  number={1},
+  pages={123--137},
+  year={2001}
+}
+
+@article{buehner_2012,
+  title={Evaluation of a spatial/spectral covariance localization approach for atmospheric data assimilation},
+  author={Buehner, Mark},
+  journal={Monthly Weather Review},
+  volume={140},
+  number={2},
+  pages={617--636},
+  year={2012}
+}
+
+@article{lorenc_2003,
+  title={The potential of the ensemble Kalman filter for NWP—a comparison with 4D-Var},
+  author={Lorenc, Andrew C},
+  journal={Quarterly Journal of the Royal Meteorological Society},
+  volume={129},
+  number={595},
+  pages={3183--3203},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+
+@article{hamill_2001,
+  title={Distance-dependent filtering of background error covariance estimates in an ensemble Kalman filter},
+  author={Hamill, Thomas M and Whitaker, Jeffrey S and Snyder, Chris},
+  journal={Monthly Weather Review},
+  volume={129},
+  number={11},
+  pages={2776--2790},
+  year={2001}
+}
+
+@article{whitaker_2002,
+  title={Ensemble data assimilation without perturbed observations},
+  author={Whitaker, Jeffrey S and Hamill, Thomas M},
+  journal={Monthly Weather Review},
+  volume={130},
+  number={7},
+  pages={1913--1924},
+  year={2002}
+}
+
+
+
+@article{doornbos_2008,
+  title={Use of two-line element data for thermosphere neutral density model calibration},
+  author={Doornbos, Eelco and Klinkrad, Heiner and Visser, Pieter},
+  journal={Advances in Space Research},
+  volume={41},
+  number={7},
+  pages={1115--1122},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{storz_2005,
+  title={High accuracy satellite drag model (HASDM)},
+  author={Storz, Mark F and Bowman, Bruce R and Branson, Major James I and Casali, Stephen J and Tobiska, W Kent},
+  journal={Advances in Space Research},
+  volume={36},
+  number={12},
+  pages={2497--2505},
+  year={2005},
+  publisher={Elsevier}
+}
+
+
+@article{chartier_2016,
+  title={Ionospheric data assimilation and forecasting during storms},
+  author={Chartier, Alex T and Matsuo, Tomoko and Anderson, Jeffrey L and Collins, Nancy and Hoar, Timothy J and Lu, Gang and Mitchell, Cathryn N and Coster, Anthea J and Paxton, Larry J and Bust, Gary S},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={121},
+  number={1},
+  pages={764--778},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
+@article{picone_2005,
+  title={Thermospheric densities derived from spacecraft orbits: Accurate processing of two-line element sets},
+  author={Picone, JM and Emmert, JT and Lean, JL},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={110},
+  number={A3},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+
+@article{evensen_1994,
+  title={Sequential data assimilation with a nonlinear quasi-geostrophic model using Monte Carlo methods to forecast error statistics},
+  author={Evensen, Geir},
+  journal={Journal of Geophysical Research: Oceans},
+  volume={99},
+  number={C5},
+  pages={10143--10162},
+  year={1994},
+  publisher={Wiley Online Library}
+}
+
+@article{evensen_2003,
+  title={The ensemble Kalman filter: Theoretical formulation and practical implementation},
+  author={Evensen, Geir},
+  journal={Ocean dynamics},
+  volume={53},
+  number={4},
+  pages={343--367},
+  year={2003},
+  publisher={Springer}
+}
+
+@article{bruinsma_2012,
+  title={Evaluation of the DTM-2009 thermosphere model for benchmarking purposes},
+  author={Bruinsma, Sean L and S{\'a}nchez-Ortiz, Noelia and Olmedo, Estrella and Guijarro, Nuria},
+  journal={Journal of Space Weather and Space Climate},
+  volume={2},
+  pages={A04},
+  year={2012},
+  publisher={EDP Sciences}
+}
+
+@article{jacchia_1965,
+  title={Static diffusion models of the upper atmosphere with empirical temperature profiles},
+  author={Jacchia, Luigi G},
+  journal={Smithsonian Contributions to Astrophysics},
+  volume={8},
+  pages={215},
+  year={1965}
+}
+
+@article{iipponen_2015,
+  title={A method to predict thermospheric mass density response to geomagnetic disturbances using time-integrated auroral electrojet index},
+  author={Iipponen, Juho and Laitinen, Tiera},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={120},
+  number={7},
+  pages={5746--5757},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
+@article{picone_2002,
+  title={NRLMSISE-00 empirical model of the atmosphere: Statistical comparisons and scientific issues},
+  author={Picone, JM and Hedin, AE and Drob, D Pj and Aikin, AC},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={107},
+  number={A12},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+
+@article{bruinsma_2015,
+  title={The DTM-2013 thermosphere model},
+  author={Bruinsma, Sean},
+  journal={Journal of Space Weather and Space Climate},
+  volume={5},
+  pages={A1},
+  year={2015},
+  publisher={EDP Sciences}
+}
+
+@article{hedin_1974,
+  title={Empirical model of global thermospheric temperature and composition based on data from the Ogo 6 quadrupole mass spectrometer},
+  author={Hedin, AE and Mayr, HG and Reber, CA and Spencer, NW and Carignan, GR},
+  journal={Journal of Geophysical Research},
+  volume={79},
+  number={1},
+  pages={215--225},
+  year={1974},
+  publisher={Wiley Online Library}
+}
+
+@article{walker_1965,
+  title={Analytic representation of upper atmosphere densities based on Jacchia's static diffusion models},
+  author={Walker, James CG},
+  year={1965}
+}
+
+@article{bruinsma_2017,
+  title={The 30 cm radio flux as a solar proxy for thermosphere density modelling},
+  author={de Wit, Thierry Dudok and Bruinsma, Sean},
+  journal={Journal of Space Weather and Space Climate},
+  volume={7},
+  pages={A9},
+  year={2017},
+  publisher={EDP Sciences}
+}
+
+@article{prolss_2011,
+  title={Density perturbations in the upper atmosphere caused by the dissipation of solar wind energy},
+  author={Pr{\"o}lss, Gerd W},
+  journal={Surveys in Geophysics},
+  volume={32},
+  number={2},
+  pages={101--195},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{bruinsma_2006,
+  title={Thermosphere density response to the 20--21 November 2003 solar and geomagnetic storm from CHAMP and GRACE accelerometer data},
+  author={Bruinsma, Sean and Forbes, Jeffrey M and Nerem, R Steven and Zhang, Xiaoli},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={111},
+  number={A6},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+
+@article{bruinsma_2014,
+  title={Validation of GOCE densities and evaluation of thermosphere models},
+  author={Bruinsma, SL and Doornbos, E and Bowman, BR},
+  journal={Advances in Space Research},
+  volume={54},
+  number={4},
+  pages={576--585},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{zhang_2006,
+  title={Monthly tidal temperatures 20--120 km from TIMED/SABER},
+  author={Zhang, Xiaoli and Forbes, Jeffrey M and Hagan, Maura E and Russell, James M and Palo, Scott E and Mertens, Christopher J and Mlynczak, Martin G},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={111},
+  number={A10},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+
+@article{meier_2015,
+  title={Remote Sensing of Earth's Limb by TIMED/GUVI: Retrieval of thermospheric composition and temperature},
+  author={Meier, RR and Picone, JM and Drob, D and Bishop, J and Emmert, JT and Lean, JL and Stephan, AW and Strickland, DJ and Christensen, AB and Paxton, LJ and others},
+  journal={Earth and Space Science},
+  volume={2},
+  number={1},
+  pages={1--37},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
+@article{moe_2006,
+  title={The effects of surface composition and treatment on drag coefficients of spherical satellites (AAS 05-258)},
+  author={Moe, Kenneth and Bowman, Bruce R},
+  journal={Advances in the astronautical sciences},
+  volume={123},
+  number={1},
+  pages={137},
+  year={2006},
+  publisher={Published for the American Astronautical Society by Univelt; 1999}
+}
+
+@article{emmert_2004,
+  title={Global change in the thermosphere: Compelling evidence of a secular decrease in density},
+  author={Emmert, JT and Picone, JM and Lean, JL and Knowles, SH},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={109},
+  number={A2},
+  year={2004},
+  publisher={Wiley Online Library}
+}
+
+@article{saunders_2011,
+  title={Further evidence of long-term thermospheric density change using a new method of satellite ballistic coefficient estimation},
+  author={Saunders, Arrun and Lewis, Hugh and Swinerd, Graham},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={116},
+  number={A2},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{doornbos_2005,
+  title={Atmospheric density calibration using satellite drag observations},
+  author={Doornbos, Eelco and Klinkrad, Heiner and Visser, PNAM},
+  journal={Advances in Space Research},
+  volume={36},
+  number={3},
+  pages={515--521},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@article{ifs_numerics,
+  title={PART III: DYNAMICS AND NUMERICAL PROCEDURES -- IFS DOCUMENTATION, Cy43r1},
+  author={ECMWF},
+  year = {2016}
+}
+
+
+@INPROCEEDINGS{doornbos_2004,
+   author = {{Doornbos}, E. and {Klinkrad}, H. and {Visser}, P.},
+    title = "{Atmospheric density calibration using satellite drag observations}",
+booktitle = {35th COSPAR Scientific Assembly},
+     year = 2004,
+   series = {COSPAR Meeting},
+   volume = 35,
+   editor = {{Paill{\'e}}, J.-P.},
+    pages = {1969},
+   adsurl = {http://adsabs.harvard.edu/abs/2004cosp...35.1969D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@inproceedings{bowman_2002,
+  title={True satellite ballistic coefficient determination for HASDM},
+  author={Bowman, Bruce},
+  booktitle={AIAA/AAS astrodynamics specialist conference and exhibit},
+  pages={4887},
+  year={2002}
+}
+
+
+
+@techreport{hoots_1980,
+  title={Models for propagation of NORAD element sets},
+  author={Hoots, Felix R and Roehrich, Ronald L},
+  year={1980},
+  institution={DTIC Document}
+}
+
+
+@article{lane_1979,
+  title={General Perturbations Theories Derived from the 1965 Lane Drag Theory, Project Space Track Report No. 2},
+  author={Lane, MH and Hoots, FR},
+  journal={Aerospace Defense Command, Peterson AFB, CO},
+  year={1979}
+}
+
+@inproceedings{vallado_2006,
+  title={Revisiting spacetrack report\# 3},
+  author={Vallado, David and Crawford, Paul and Hujsak, Ricahrd and Kelso, TS},
+  booktitle={AIAA/AAS Astrodynamics Specialist Conference and Exhibit},
+  pages={6753},
+  year={2006}
+}
+
+@article{morozov_2013,
+  title={Data assimilation and driver estimation for the Global Ionosphere--Thermosphere Model using the Ensemble Adjustment Kalman Filter},
+  author={Morozov, Alexey V and Ridley, Aaron J and Bernstein, Dennis S and Collins, Nancy and Hoar, Timothy J and Anderson, Jeffrey L},
+  journal={Journal of Atmospheric and Solar-Terrestrial Physics},
+  volume={104},
+  pages={126--136},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{hamill_2001b,
+  title={Interpretation of rank histograms for verifying ensemble forecasts},
+  author={Hamill, Thomas M},
+  journal={Monthly Weather Review},
+  volume={129},
+  number={3},
+  pages={550--560},
+  year={2001}
+}
+
+
+@book{jarvinen_2015,
+  title={Luentomoniste, Advanced course in atmospheric dynamics},
+  author={Järvinen, Heikki},
+  year={2015},
+  publisher={Helsingin yliopisto, Fysiikan laitos, Ilmakehätieteiden osasto}
+}
+
+@book{roy_2004,
+  title={Orbital motion},
+  author={Roy, Archie E},
+  year={2004},
+  publisher={CRC Press}
+}
+
+
+@book{king_hele_1987,
+  title={Satellite orbits in an atmosphere: theory and application},
+  author={King-Hele, Desmond George},
+  year={1987},
+  publisher={Springer Science \& Business Media}
+}
+
+@book{wilks_2011,
+  title={Statistical methods in the atmospheric sciences},
+  author={Wilks, Daniel S},
+  volume={100},
+  year={2011},
+  publisher={Academic press}
+}
 
 
 @book{Shim_2014,
@@ -75,4 +511,101 @@
     publisher={Springer, Netherlands},
     pages={107-114},
     keywords = {physics}
+}
+
+@book{vallado_2001,
+  title={Fundamentals of astrodynamics and applications},
+  author={Vallado, David A},
+  volume={12},
+  year={2001},
+  publisher={Springer Science \& Business Media}
+}
+
+
+
+@incollection{more_1978,
+  title={The Levenberg-Marquardt algorithm: implementation and theory},
+  author={Mor{\'e}, Jorge J},
+  booktitle={Numerical analysis},
+  pages={105--116},
+  year={1978},
+  publisher={Springer}
+}
+
+@incollection{nichols_2010,
+  title={Mathematical concepts of data assimilation},
+  author={Nichols, Nancy Kay},
+  booktitle={Data assimilation},
+  pages={13--39},
+  year={2010},
+  publisher={Springer}
+}
+
+@incollection{talagrand_2010,
+  title={Variational assimilation},
+  author={Talagrand, Olivier},
+  booktitle={Data assimilation},
+  pages={41--67},
+  year={2010},
+  publisher={Springer}
+}
+
+@article{kalman_1960,
+  title={A new approach to linear filtering and prediction problems},
+  author={Kalman, Rudolph Emil and others},
+  journal={Journal of basic Engineering},
+  volume={82},
+  number={1},
+  pages={35--45},
+  year={1960}
+}
+
+@article{mackenzie_2003,
+  title={Ensemble Kalman filters bring weather models up to date},
+  author={Mackenzie, Dana},
+  journal={Siam news},
+  volume={36},
+  number={8},
+  pages={10--03},
+  year={2003}
+}
+
+@incollection{kalnay_2010,
+  title={Ensemble Kalman filter: current status and potential},
+  author={Kalnay, Eugenia},
+  booktitle={Data Assimilation},
+  pages={69--92},
+  year={2010},
+  publisher={Springer}
+}
+
+@book{mandel_2006,
+  title={Efficient implementation of the ensemble Kalman filter},
+  author={Mandel, Jan},
+  year={2006},
+  publisher={University of Colorado at Denver and Health Sciences Center, Center for Computational Mathematics}
+}
+
+
+
+
+@article{bertino_2003,
+  title={Sequential data assimilation techniques in oceanography},
+  author={Bertino, Laurent and Evensen, Geir and Wackernagel, Hans},
+  journal={International Statistical Review},
+  volume={71},
+  number={2},
+  pages={223--241},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+
+
+
+
+@misc{spacetrack,
+  title = {Space-Track.org},
+  howpublished = {\url{https://www.space-track.org/}},
+  year = {2017},
+  note = {Luettu: 2017-05-11}
 }
