--- a/gradu.tex
+++ b/gradu.tex
@@ -465,7 +465,7 @@ Paras arvo varianssille löydetään tarkastelemalla havaittujen arvojen sijaintia 
 \centering
 \includegraphics[scale = 0.6]{gradu_tempcorr}
 \caption{Data-assimilaatio-järjestelmän tuottamat korjaukset lämpötilaparametreihin. }
-\label{fig:rank}
+\label{?}{fig:rank}
 \end{figure}
 
 \section{Pohdinta}
