--- a/gradu.bib
+++ b/gradu.bib
@@ -137,26 +137,6 @@
   year={2001}
 }
 
-@article{bishop_2001,
-  title={Adaptive sampling with the ensemble transform Kalman filter. Part I: Theoretical aspects},
-  author={Bishop, Craig H and Etherton, Brian J and Majumdar, Sharanya J},
-  journal={Monthly weather review},
-  volume={129},
-  number={3},
-  pages={420--436},
-  year={2001}
-}
-
-@article{moradkhani_2005,
-  title={Uncertainty assessment of hydrologic model states and parameters: Sequential data assimilation using the particle filter},
-  author={Moradkhani, Hamid and Hsu, Kuo-Lin and Gupta, Hoshin and Sorooshian, Soroosh},
-  journal={Water resources research},
-  volume={41},
-  number={5},
-  year={2005},
-  publisher={Wiley Online Library}
-}
-
 @article{whitaker_2002,
   title={Ensemble data assimilation without perturbed observations},
   author={Whitaker, Jeffrey S and Hamill, Thomas M},
@@ -189,28 +169,6 @@
   pages={2497--2505},
   year={2005},
   publisher={Elsevier}
-}
-
-@article{tobiska_2000,
-  title={The SOLAR2000 empirical solar irradiance model and forecast tool},
-  author={Tobiska, W Kent and Woods, Tom and Eparvier, Frank and Viereck, Rodney and Floyd, Linton and Bouwer, Dave and Rottman, Gary and White, OR},
-  journal={Journal of Atmospheric and Solar-Terrestrial Physics},
-  volume={62},
-  number={14},
-  pages={1233--1250},
-  year={2000},
-  publisher={Elsevier}
-}
-
-
-@article{emmert_2008,
-  title={Thermospheric global average density trends, 1967--2007, derived from orbits of 5000 near-Earth objects},
-  author={Emmert, JT and Picone, JM and Meier, RR},
-  journal={Geophysical Research Letters},
-  volume={35},
-  number={5},
-  year={2008},
-  publisher={Wiley Online Library}
 }
 
 
@@ -336,24 +294,13 @@
 
 @article{prolss_2011,
   title={Density perturbations in the upper atmosphere caused by the dissipation of solar wind energy},
-  author={Prolss, Gerd W},
+  author={Pr{\"o}lss, Gerd W},
   journal={Surveys in Geophysics},
   volume={32},
   number={2},
   pages={101--195},
   year={2011},
   publisher={Springer}
-}
-
-@article{gaspari_1999,
-  title={Construction of correlation functions in two and three dimensions},
-  author={Gaspari, Gregory and Cohn, Stephen E},
-  journal={Quarterly Journal of the Royal Meteorological Society},
-  volume={125},
-  number={554},
-  pages={723--757},
-  year={1999},
-  publisher={Wiley Online Library}
 }
 
 @article{bruinsma_2006,
@@ -395,14 +342,6 @@
   number={1},
   pages={1--37},
   year={2015},
-  publisher={Wiley Online Library}
-}
-
-@article{slanger_2017,
-  title={Atmospheric dayglow diagnostics involving the O2 (b-X) Atmospheric band emission: Global Oxygen and Temperature (GOAT) mapping},
-  author={Slanger, TG and Pejakovi{\'c}, DA and Kostko, O and Matsiev, D and Kalogerakis, KS},
-  journal={Journal of Geophysical Research: Space Physics},
-  year={2017},
   publisher={Wiley Online Library}
 }
 
@@ -449,21 +388,24 @@
 }
 
 @article{ifs_numerics,
-  title={PART III: DYNAMICS AND NUMERICAL PROCEDURES, IFS DOCUMENTATION, Cy43r1},
+  title={PART III: DYNAMICS AND NUMERICAL PROCEDURES -- IFS DOCUMENTATION, Cy43r1},
   author={ECMWF},
   year = {2016}
 }
 
 
-@inproceedings{doornbos_2004,
-  title={Atmospheric density calibration using satellite drag observations},
-  author={Doornbos, E and Klinkrad, H and Visser, P},
-  booktitle={35th COSPAR Scientific Assembly},
-  volume={35},
-  pages={1969},
-  year={2004}
+@INPROCEEDINGS{doornbos_2004,
+   author = {{Doornbos}, E. and {Klinkrad}, H. and {Visser}, P.},
+    title = "{Atmospheric density calibration using satellite drag observations}",
+booktitle = {35th COSPAR Scientific Assembly},
+     year = 2004,
+   series = {COSPAR Meeting},
+   volume = 35,
+   editor = {{Paill{\'e}}, J.-P.},
+    pages = {1969},
+   adsurl = {http://adsabs.harvard.edu/abs/2004cosp...35.1969D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
 
 @inproceedings{bowman_2002,
   title={True satellite ballistic coefficient determination for HASDM},
@@ -642,17 +584,6 @@
   author={Mandel, Jan},
   year={2006},
   publisher={University of Colorado at Denver and Health Sciences Center, Center for Computational Mathematics}
-}
-
-@article{berger_1998,
-  title={Improvement of the empirical thermospheric model DTM: DTM94--a comparative review of various temporal variations and prospects in space geodesy applications},
-  author={Berger, Christiane and Biancale, Richard and Ill, M and Barlier, F},
-  journal={Journal of Geodesy},
-  volume={72},
-  number={3},
-  pages={161--178},
-  year={1998},
-  publisher={Springer}
 }
 
 
