--- a/gradu.bib
+++ b/gradu.bib
@@ -33,6 +33,77 @@
   publisher={EDP Sciences}
 }
 
+@article{moradkhani_2005,
+  title={Uncertainty assessment of hydrologic model states and parameters: Sequential data assimilation using the particle filter},
+  author={Moradkhani, Hamid and Hsu, Kuo-Lin and Gupta, Hoshin and Sorooshian, Soroosh},
+  journal={Water resources research},
+  volume={41},
+  number={5},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+
+@article{berger_1998,
+  title={Improvement of the empirical thermospheric model DTM: DTM94--a comparative review of various temporal variations and prospects in space geodesy applications},
+  author={Berger, Christiane and Biancale, Richard and Ill, M and Barlier, F},
+  journal={Journal of Geodesy},
+  volume={72},
+  number={3},
+  pages={161--178},
+  year={1998},
+  publisher={Springer}
+}
+
+@article{tobiska_2000,
+  title={The SOLAR2000 empirical solar irradiance model and forecast tool},
+  author={Tobiska, W Kent and Woods, Tom and Eparvier, Frank and Viereck, Rodney and Floyd, Linton and Bouwer, Dave and Rottman, Gary and White, OR},
+  journal={Journal of Atmospheric and Solar-Terrestrial Physics},
+  volume={62},
+  number={14},
+  pages={1233--1250},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@article{emmert_2008,
+  title={Thermospheric global average density trends, 1967--2007, derived from orbits of 5000 near-Earth objects},
+  author={Emmert, JT and Picone, JM and Meier, RR},
+  journal={Geophysical Research Letters},
+  volume={35},
+  number={5},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@article{slanger_2017,
+  title={Atmospheric dayglow diagnostics involving the O2 (b-X) Atmospheric band emission: Global Oxygen and Temperature (GOAT) mapping},
+  author={Slanger, TG and Pejakovi{\'c}, DA and Kostko, O and Matsiev, D and Kalogerakis, KS},
+  journal={Journal of Geophysical Research: Space Physics},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
+@article{gaspari_1999,
+  title={Construction of correlation functions in two and three dimensions},
+  author={Gaspari, Gregory and Cohn, Stephen E},
+  journal={Quarterly Journal of the Royal Meteorological Society},
+  volume={125},
+  number={554},
+  pages={723--757},
+  year={1999},
+  publisher={Wiley Online Library}
+}
+
+@article{bishop_2001,
+  title={Adaptive sampling with the ensemble transform Kalman filter. Part I: Theoretical aspects},
+  author={Bishop, Craig H and Etherton, Brian J and Majumdar, Sharanya J},
+  journal={Monthly weather review},
+  volume={129},
+  number={3},
+  pages={420--436},
+  year={2001}
+}
+
 @article{anderson_2009,
   title={Spatially and temporally varying adaptive covariance inflation for ensemble filters},
   author={Anderson, Jeffrey L},
@@ -128,7 +199,7 @@
 }
 
 @article{lorenc_2003,
-  title={The potential of the ensemble Kalman filter for NWPâ€”a comparison with 4D-Var},
+  title={The potential of the ensemble Kalman filter for NWP -- a comparison with 4D-Var},
   author={Lorenc, Andrew C},
   journal={Quarterly Journal of the Royal Meteorological Society},
   volume={129},
@@ -488,7 +559,7 @@ booktitle = {35th COSPAR Scientific Assembly},
   title={Luentomoniste, Advanced course in atmospheric dynamics},
   author={Järvinen, Heikki},
   year={2015},
-  publisher={Helsingin yliopisto, Fysiikan laitos, IlmakehÃ¤tieteiden osasto}
+  publisher={Helsingin yliopisto, Fysiikan laitos, Ilmakehätieteiden osasto}
 }
 
 @book{roy_2004,
@@ -633,14 +704,17 @@ booktitle = {35th COSPAR Scientific Assembly},
 
 
 @misc{spacetrack,
-  title = {Space-Track.org},
+  title = {Space-track.org kotisivu},
+  author={Space-track.org},
   howpublished = {\url{https://www.space-track.org/}},
   year = {2017},
-  note = {Luettu: 2017-05-11}
+  note = {Luettu: 11.5.2017}
 }
 
 @misc{wikimedia,
-  title = {Wikimedia},
+  title = {File: Explorer8.jpg},
+  author={Wikimedia},
+  year = {2017},
   howpublished = {\url{https://commons.wikimedia.org/wiki/File:Explorer_8.jpg}},
-  note = {Luettu: 2017-05-11}
+  note = {Luettu: 11.5.2017}
 }
